--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       body { 
         margin: 0; 
         font-family: Arial, sans-serif; 
-        background-color: black;
-        color: white;
+        background-color: white;
+        color: #333;
       }
       img {
         max-width: 300px;
@@ -41,7 +41,7 @@
         "What about a maybe?",
         "Why not?",
         "Huh???",
-        "You're supposed to say yeah!?",
+        "You're supposed to say yes!?",
       ];
 
       function App() {
@@ -65,7 +65,7 @@
               <>
                 <img src={firstImg} />
                 <h1 style={{ color: "#ff69b4" }}>
-                  Will you be my babyboo Valentine?? 💘
+                  Will you be my babyboo Valentine? 💘
                 </h1>
                 <div>
                   <button
@@ -107,10 +107,10 @@
                 <img src={secondImg} />
                 <div style={{
                   fontSize: "48px",
-                  color: "pink",
+                  color: "#ff69b4",
                   fontWeight: "bold",
                 }}>
-                  Yayyyy, Lets gooo!!! 💖
+                  Yay! 💖 Let's go!
                 </div>
               </>
             )}
