--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
       const NO_PHRASES = [
         "No 💔",
         "Pretty please?",
-        "But we'd be so cute together! 💕",
+        "Think about it! 💕",
         "Are you sure???",
         "Don't break my heart :(",
         "What about a maybe?",
+        "Please think about it again.",
         "Why not?",
         "Huh???",
         "You're supposed to say yes!?",
+        "I give up.",
       ];
 
       function App() {
